Sign in UI completed

--- a/GiveHub/Base.lproj/Main.storyboard
+++ b/GiveHub/Base.lproj/Main.storyboard
@@ -20,11 +20,115 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="igS-GW-4Ng">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GiveHub" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyo-62-eBZ">
+                                        <rect key="frame" x="76" y="86" width="223" height="47"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="223" id="6tH-O1-HqY"/>
+                                            <constraint firstAttribute="height" constant="47" id="U2C-WQ-hmh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="48"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in with" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihz-R2-V3d">
+                                        <rect key="frame" x="122" y="183" width="131" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="131" id="GaU-tS-H0n"/>
+                                            <constraint firstAttribute="height" constant="21" id="oNo-C6-XSe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9b-Ap-Rgy">
+                                        <rect key="frame" x="135" y="332" width="104" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="104" id="VG2-6m-Tyb"/>
+                                            <constraint firstAttribute="height" constant="25" id="lQu-nD-bkS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fj2-c6-Rm6" customClass="RoundedCornersAndShadow" customModule="GiveHub" customModuleProvider="target">
+                                        <rect key="frame" x="69" y="250" width="237" height="36"/>
+                                        <color key="backgroundColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="10f-gz-P2S"/>
+                                            <constraint firstAttribute="width" constant="237" id="JSr-gN-wjO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="22"/>
+                                        <state key="normal" title="Facebook">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NKh-ov-nD6">
+                                        <rect key="frame" x="69" y="403" width="237" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="ZGr-2c-hFd"/>
+                                            <constraint firstAttribute="width" constant="237" id="bFc-XM-6D0"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="********" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4e-2X-dr4">
+                                        <rect key="frame" x="69" y="466" width="237" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="0SI-sT-yv0"/>
+                                            <constraint firstAttribute="width" constant="237" id="5W6-kl-cLc"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pC4-OZ-2BR">
+                                        <rect key="frame" x="138" y="556" width="98" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="98" id="g84-cO-iNY"/>
+                                            <constraint firstAttribute="height" constant="30" id="pOm-Qd-ECB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="24"/>
+                                        <state key="normal" title="Log in">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.95668298009999997" green="0.26356393099999997" blue="0.21356132629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Fj2-c6-Rm6" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="3jR-Yg-MD7"/>
+                                    <constraint firstItem="c4e-2X-dr4" firstAttribute="top" secondItem="NKh-ov-nD6" secondAttribute="bottom" constant="23" id="4WF-aN-lKH"/>
+                                    <constraint firstItem="pC4-OZ-2BR" firstAttribute="top" secondItem="c4e-2X-dr4" secondAttribute="bottom" constant="50" id="YOz-kM-l2u"/>
+                                    <constraint firstItem="b9b-Ap-Rgy" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="d8r-Db-0gG"/>
+                                    <constraint firstItem="ihz-R2-V3d" firstAttribute="top" secondItem="iyo-62-eBZ" secondAttribute="bottom" constant="50" id="hUR-bt-G0v"/>
+                                    <constraint firstItem="iyo-62-eBZ" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="kIW-Oq-Xzx"/>
+                                    <constraint firstItem="NKh-ov-nD6" firstAttribute="top" secondItem="b9b-Ap-Rgy" secondAttribute="bottom" constant="46" id="ow9-dP-jO0"/>
+                                    <constraint firstItem="b9b-Ap-Rgy" firstAttribute="top" secondItem="Fj2-c6-Rm6" secondAttribute="bottom" constant="46" id="pwX-VG-chJ"/>
+                                    <constraint firstItem="NKh-ov-nD6" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="qiz-LV-FPl"/>
+                                    <constraint firstItem="pC4-OZ-2BR" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="rb8-41-t2r"/>
+                                    <constraint firstItem="iyo-62-eBZ" firstAttribute="top" secondItem="igS-GW-4Ng" secondAttribute="top" constant="86" id="szS-Kz-CUV"/>
+                                    <constraint firstItem="c4e-2X-dr4" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="tOx-H5-Pkw"/>
+                                    <constraint firstItem="Fj2-c6-Rm6" firstAttribute="top" secondItem="ihz-R2-V3d" secondAttribute="bottom" constant="46" id="teO-CB-jhs"/>
+                                    <constraint firstItem="ihz-R2-V3d" firstAttribute="centerX" secondItem="igS-GW-4Ng" secondAttribute="centerX" id="vXC-E1-UZd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="igS-GW-4Ng" secondAttribute="bottom" id="PSj-yI-AdO"/>
+                            <constraint firstAttribute="trailing" secondItem="igS-GW-4Ng" secondAttribute="trailing" id="SMy-yF-bTc"/>
+                            <constraint firstItem="igS-GW-4Ng" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Sl5-jX-yDr"/>
+                            <constraint firstItem="igS-GW-4Ng" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sbB-yq-47F"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
